[gd_scene load_steps=18 format=2]

[ext_resource path="res://mobs/slime/slime_hurt.ogg" type="AudioStream" id=1]
[ext_resource path="res://mobs/components/component_manager.gd" type="Script" id=2]
[ext_resource path="res://mobs/slime/slime.png" type="Texture" id=3]
[ext_resource path="res://ui/fonts/16x.tres" type="DynamicFont" id=4]
[ext_resource path="res://mobs/components/health_bar.gd" type="Script" id=5]
[ext_resource path="res://ui/fonts/32x.tres" type="DynamicFont" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=8]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 3 ), Vector2( 4, 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 3 ), Vector2( 4, 5 ), Vector2( 4, 3 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.5, 4.5 )

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.392157 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "hide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MobComponentManager" type="Node2D"]
script = ExtResource( 2 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 1 )
volume_db = 5.0
bus = "Audio"

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 1 )
volume_db = 5.0
bus = "Audio"

[node name="SpriteHolder" type="Node2D" parent="."]
position = Vector2( 4, 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SpriteHolder"]
pause_mode = 1
position = Vector2( 0, -0.15 )
frames = SubResource( 2 )
playing = true

[node name="HurtAnimationPlayer" type="AnimationPlayer" parent="SpriteHolder/AnimatedSprite"]
pause_mode = 2
anims/death = SubResource( 8 )
anims/hurt = SubResource( 7 )

[node name="FlipAnimationPlayer" type="AnimationPlayer" parent="SpriteHolder/AnimatedSprite"]
pause_mode = 2
anims/flip = SubResource( 4 )

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
position = Vector2( 4, 3.5 )
shape = SubResource( 5 )

[node name="Index" type="Node2D" parent="."]
z_index = 5

[node name="HealthLabel" type="Label" parent="Index"]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Index/HealthLabel"]
anims/label = SubResource( 6 )

[node name="HealthBar" type="ProgressBar" parent="Index"]
modulate = Color( 1, 1, 1, 0.392157 )
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_left = -1.0
margin_top = -6.0
margin_right = 51.0
margin_bottom = 15.0
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = ExtResource( 4 )
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 9 )
value = 100.0
percent_visible = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Index/HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.283
custom_fonts/font = ExtResource( 6 )
text = "5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Index/HealthBar"]
anims/RESET = SubResource( 11 )
anims/hide = SubResource( 12 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( -6, -6 )
rect = Rect2( -10, -10, 40, 40 )
process_parent = true
physics_process_parent = true
